--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <ul>
                 <li><a href="features.html">Recipes</a></li>
             </ul>
+            <ul>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
 
