--- a/recipe4.html
+++ b/recipe4.html
@@ -12,7 +12,12 @@
     <header>
         <nav>
             <a href="index.html"><img src="images/unnamed.png" height="75" alt="logo"></a>
-            <a href="features.html">Recipes</a>
+            <ul>
+                <li><a href="features.html">Recipes</a></li>
+            </ul>
+            <ul>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
 
