--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-        <form>
+        <form action="results.html">
             <p>
                 <label for="firstname">First name:</label>
                 <input type="text" name="firstname" id="firstname">
@@ -36,16 +36,22 @@
                 <input type="text" name="email" id="email">
             </p>
 
-            <select name="how you hear" id="how you heard" multiple>
+            <label for="how-you-heard">How did you hear about us?</label>
+            <select name="how-you-heard" id="how-you-heard" multiple>
                 <option value="email">Email</option>
                 <option value="family">Family</option>
                 <option value="ad">Advertisement</option>
                 <option value="socialmedia">Social Media </option>
-    
-
-
             </select>
 
+            <p>
+                <label for="comments">Additional Comments</label>
+                <textarea name="comments" id="comments" rows="4" colms="10"></textarea>
+            </p>
+            <p>
+                <input type="submit" value="Submit">
+                <input type="reset" value="Reset">
+            </p>
         </form>
 
 
