--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 
             <p>
                 <label for="comments">Additional Comments</label>
-                <textarea name="comments" id="comments" rows="4" colms="10"></textarea>
+                <textarea name="comments" id="comments" rows="4" cols="10"></textarea>
             </p>
             <p>
                 <input type="submit" value="Submit">
